--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EarthQuakeNew</string>
+    <string name="no_earthquakes">No earthquake found</string>
+    <string name="no_internet">No Internet Connection</string>
 </resources>
